<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ambrosia</name>
  <version>0.0.0</version>
  <description>Eurobot 2023 ambrosia pkg</description>
  <maintainer email="gkktist@gmail.com">MY NAME</maintainer>
  <license>Apache license 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
